Bijayini | #2774 | Fix UI breaks on reg page (relationship section)

--- a/ui/app/styles/registration/_relationship.scss
+++ b/ui/app/styles/registration/_relationship.scss
@@ -109,9 +109,15 @@
     .row{
       &:nth-child(odd) {
         background-color: #EFEFEF;
+        .col{
+          border: 1px solid #EFEFEF;
+        }
       }
       &:nth-child(even) {
         background-color: #fff;
+        .col{
+          border: 1px solid #fff;
+        }
       }
       &:last-child{
         margin-bottom: 15px;
@@ -120,9 +126,6 @@
       }
       padding: 3px 3px 3px 8px;
       line-height: 30px;
-      .col{
-        border: 1px solid #EFEFEF;
-      }
       .col1{ width: 34% }
       .col2{
         width: 33.3%;
